kubernetes/kind/tests/fixtures/policy-render/expected/minimal/repo/cluster-policies/shared/external-secrets-hardened.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: external-secrets-hardened
spec:
  endpointSelector:
    matchLabels:
      "k8s:io.kubernetes.pod.namespace": external-secrets
      "k8s:app.kubernetes.io/instance": external-secrets
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
